--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,4 +5,6 @@
   <li><a routerLink='dircmp'>Dir comp</a></li>
   <li><a routerLink='bindings'>bindings</a></li>
   <li><a routerLink='todo'>To Do</a></li>
+  <li><a routerLink='forms'>Forms</a></li>
+  <li><a routerLink='mdf'>Mdf</a></li>
 </ul>
