Services in Angular 2

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,4 +7,5 @@
   <li><a routerLink='todo'>To Do</a></li>
   <li><a routerLink='forms'>Forms</a></li>
   <li><a routerLink='mdf'>Mdf</a></li>
+  <li><a routerLink='photos'>Photos</a></li>
 </ul>
